--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,25 @@
+@import "variables";
 /* You can add global styles to this file, and also import other style files */
+
+// reset
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Times, Times New Roman, serif	;
+  background-color: darken($background-color, 4%);
+  color: $text-color;
+  overflow: hidden;
+  cursor: none;
+
+  height: 100vh;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
