--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,24 +1,10 @@
 @import "../variables";
 
-$transition-time: 0.3s;
-$height-space: 15%;
-
-#square {
+.content {
   transition:
     $transition-time width ease-in-out,
-    $transition-time height ease-in-out,
-    $transition-time background-color ease-in-out;
+    $transition-time height ease-in-out;
 
-  position: absolute;
-  transform: translate(-50%, -50%);
-  height: 15px;
-  width: 15px;
-  z-index: -1;
-
-  background-color: $text-color;
-}
-
-.content {
   width: 90%;
   height: 100% - $height-space;
 
@@ -30,34 +16,4 @@ $height-space: 15%;
 
   background-color: $background-color;
   border: 2px solid lighten($background-color, 10%);
-}
-
-h1 {
-  font-weight: 300;
-  font-size: 1.25rem;
-  display: inline;
-  padding: 0.1em;
-}
-
-h1, #sizer {
-  transition: $transition-time color ease-in-out;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: $height-space / 2;
-  max-width: 50%;
-
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#sizer {
-  position: absolute;
-  height: 30px;
-  width: 30px;
-  right: 0;
-  padding: 0.5em;
 }
