--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,3 +3,8 @@ $text-color: #fff;
 
 $transition-time: 0.3s;
 $height-space: 15%;
+
+$space-around: 5px;
+
+$sizer-width: 30px;
+$sizer-padding: 0.5em;
