--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,14 @@
 <app-sizer></app-sizer>
 <!-- Nav is the navigation bar at top of the page -->
 <app-nav></app-nav>
+<!-- Displays the current page -->
+<app-selected></app-selected>
 
 <!-- Main Content -->
+<div class="divider" id="divider"></div>
 <div class="content" id="content">
-
+  <view-home id="SecHome"></view-home>
+  <view-about id="SecAbout" style="display: none"></view-about>
+  <view-projects id="SecProjects" style="display: none"></view-projects>
+  <view-contact id="SecContact" style="display: none"></view-contact>
 </div>
