--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,8 +12,20 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: -2;
+  z-index: -3;
 
   background-color: $background-color;
   border: 2px solid lighten($background-color, 10%);
+  padding: 2.5em 5em;
+}
+
+.divider {
+  position: absolute;
+  top: ($sizer-padding / 1em) + ($sizer-width + ($space-around * 2));
+  transform: translateY(-100%);
+  z-index: -2;
+
+  width: 100%;
+  height: 2px;
+  background: lighten($background-color, 10%);
 }
