--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,3 +1,3 @@
 <nav id="nav">
-  <h1 *ngFor="let page of pages" [id]="page">{{ page }}</h1>
+  <h1 *ngFor="let page of pages" [id]="page" (click)="changePage(page)">{{ page }}</h1>
 </nav>
