--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
-$background-color: #222;
-$text-color: #fff;
+$background-color: #fff;
+$text-color: #333;
 
 $transition-time: 0.3s;
 $height-space: 15%;
