--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,15 @@
 <!-- Displays the current page -->
 <app-selected></app-selected>
 
+<div class="gud">
+  <img src="assets/gud.png" alt="gud">
+</div>
+
 <!-- Main Content -->
 <div class="content" id="content">
-  <view-home id="SecHome"></view-home>
-  <view-about id="SecAbout" style="display: none"></view-about>
-  <view-projects id="SecProjects" style="display: none"></view-projects>
-  <view-contact id="SecContact" style="display: none"></view-contact>
+  <div class="wrapper">
+    <view-home id="SecHome"></view-home>
+    <view-projects id="SecProjects" style="display: none"></view-projects>
+    <view-contact id="SecContact" style="display: none"></view-contact>
+  </div>
 </div>
