--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,9 +12,46 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: -3;
+  z-index: 100;
 
   background-color: $background-color;
-  border: 2px solid lighten($background-color, 10%);
+  border: 2px solid darken($background-color, 5%);
+  border-radius: 15px;
   padding: 2.5em 5em;
+
+  // minimalistic shadow
+  box-shadow: 0 0 5px 0 rgba(100, 100, 0, 0.1);
+}
+
+.wrapper {
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.gud {
+  position: absolute;
+  top: -15px;
+  left: 0;
+  z-index: 1000;
+
+  img {
+    width: 20dvh;
+    height: auto;
+  }
+
+  animation: size 1s infinite;
+}
+
+// basic animation for getting larger and smaller
+@keyframes size {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
