--- a/src/app/core/views/home/home.component.html
+++ b/src/app/core/views/home/home.component.html
@@ -1,1 +1,21 @@
-<p>home works!</p>
+<h1>shuka.rip</h1>
+
+Welcome to my portfolio website!<br/>
+<br/><br/>
+Hello there!  <img class="hello" src="assets/hello.jpg" alt="hello"> <br/>
+<br/>
+My name is <i class="flash">Lucas</i>, and I'm a passionate developer from <i class="shadow-dance">Germany</i>,
+specifically from the beautiful city of <span (mouseover)="showMd($event)" (mouseleave)="hideMd($event)">Magdeburg</span>.<br/>
+Currently, I am working as an apprentice at <i class="shadow-dance">regiocom SE</i>,
+where I have the opportunity to expand my skills and knowledge.<br/>
+<br/>
+I have a strong affinity for programming and enjoy working with various languages such as Java, Kotlin, TypeScript, HTML, and CSS.<br/>
+Additionally, I love exploring new technologies and languages.<br/>
+Recently, I've been delving into game development, app development, and even operating system development.<br/>
+It's always exciting for me to dive into new challenges and learn something new.<br/>
+I'm currently exploring languages like Go, C, C#, and more.<br/>
+<br/>
+Feel free to browse through my portfolio and check out some of the projects I've been working on.<br/>
+If you have any questions, don't hesitate to reach out to me.<br/>
+<br/>
+Thank you for visiting, and I hope you enjoy exploring my work!
