Seperated Animations & Badge, Fixed Hash Bug on Reload, Added Responsive Design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,11 @@
-<!-- Square is the cursor replacement -->
+<!-- Square is the cursor replacement, on title hover -->
 <app-square></app-square>
 <!-- Sizer is the icon at the right top, to in- or decrease the content -->
 <app-sizer></app-sizer>
 <!-- Nav is the navigation bar at top of the page -->
 <app-nav></app-nav>
-
-<div class="gud">
-  <img src="assets/gud.png" alt="gud">
-</div>
+<!-- Very important Badge -->
+<app-gud-badge></app-gud-badge>
 
 <!-- Main Content -->
 <div class="content" id="content">
