--- a/src/app/core/components/sizer/sizer.component.scss
+++ b/src/app/core/components/sizer/sizer.component.scss
@@ -11,4 +11,9 @@
   padding: $sizer-padding;
 
   z-index: 1000;
+
+  // when the user uses a phone hide the sizer
+  @media (max-width: $phone-width) {
+    display: none;
+  }
 }
