--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,39 +19,19 @@
   border-radius: 15px;
   padding: 2.5em 5em;
 
-  // minimalistic shadow
   box-shadow: 0 0 5px 0 rgba(100, 100, 0, 0.1);
+
+  overflow: auto;
 }
 
 .wrapper {
   width: 70%;
   margin-left: auto;
   margin-right: auto;
-}
 
-.gud {
-  position: absolute;
-  top: -15px;
-  left: 0;
-  z-index: 1000;
-
-  img {
-    width: 20dvh;
-    height: auto;
-  }
-
-  animation: size 1s infinite;
-}
-
-// basic animation for getting larger and smaller
-@keyframes size {
-  0% {
-    transform: scale(1);
-  }
-  50% {
-    transform: scale(1.1);
-  }
-  100% {
-    transform: scale(1);
+  @media (max-width: $phone-width) {
+    width: 100%;
+    text-align: center;
   }
 }
+
