--- a/src/app/core/components/nav/nav.component.scss
+++ b/src/app/core/components/nav/nav.component.scss
@@ -11,6 +11,10 @@ nav {
 
   margin-left: auto;
   margin-right: auto;
+
+  @media (max-width: $phone-width) {
+    max-width: 100%;
+  }
 }
 
 h1 {
@@ -20,4 +24,19 @@ h1 {
   font-size: 1.25rem;
   display: inline;
   padding: 0.1em;
+
+  &:hover {
+    cursor: grab;
+  }
+
+  &:active {
+    cursor: grabbing;
+  }
+
+  @media (max-width: $phone-width) {
+    z-index: 1000;
+    padding: 0 1em;
+    margin-top: -10px;
+    background-color: rgb(255, 255, 255, 0.5);
+  }
 }
