Forget little thing nom :(

--- a/src/app/core/components/gud-badge/gud-badge.component.scss
+++ b/src/app/core/components/gud-badge/gud-badge.component.scss
@@ -18,6 +18,11 @@
     @include anim-flashy-hue;
   }
 
+  &.disappear {
+    @include anim-fly-away;
+    animation-fill-mode: forwards;
+  }
+
   @media (max-width: $phone-width) {
     display: none;
   }
