audio player and gud home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,11 @@
 <app-nav></app-nav>
 <!-- Very important Badge -->
 <app-gud-badge></app-gud-badge>
+<!-- Audio Player -->
+<app-audio-player></app-audio-player>
 
 <!-- Main Content -->
+<div class="wtf"></div>
 <div class="content" id="content">
   <div class="wrapper">
     <view-home id="SecHome"></view-home>
