--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 @import "../variables";
+@import "./core/scss/mixins/mixins";
 
 .content {
   transition:
@@ -15,13 +16,14 @@
   z-index: 100;
 
   background-color: $background-color;
-  border: 2px solid darken($background-color, 5%);
-  border-radius: 15px;
+  border-radius: 20px;
   padding: 2.5em 5em;
 
-  box-shadow: 0 0 5px 0 rgba(100, 100, 0, 0.1);
-
   overflow: auto;
+}
+
+.wtf {
+  @include funky-border();
 }
 
 .wrapper {
