--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,3 +26,41 @@ a {
     cursor: grabbing;
   }
 }
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: transparent;
+  box-shadow: inset 2px 2px 10px grey;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(255, 255, 255, 0.5);
+}
+
+h1.title {
+  color: #fff;
+  text-shadow: 0 0 0 rgb(43, 43, 43),
+  1px 1px 0 rgb(25, 25, 25),
+  2px 2px 0 rgb(7, 7, 7),
+  3px 3px 0 rgb(-12, -12, 0),
+  4px 4px 0 rgb(-30, -30, 0),
+  5px 5px 0 rgb(-48, -48, 0),
+  6px 6px 0 rgb(-66, -66, 0),
+  7px 7px 0 rgb(-84, -84, 0),
+  8px 8px 7px rgba(255, 255, 255, 0.8),
+  8px 8px 1px rgba(255, 255, 255, 0.5),
+  0 0 7px rgba(255, 255, 255, .2);
+  padding-bottom: 0.25em;
+}
