minor style changes

--- a/src/app/core/scss/mixins/funky-border.scss
+++ b/src/app/core/scss/mixins/funky-border.scss
@@ -9,7 +9,7 @@
   width: 90.5vw;
   height: 86vh;
   z-index: -10000;
-  border-radius: 20px;
+  border-radius: 33vw;
 }
 
 @keyframes gradient-animation {
