--- a/src/app/core/views/contact/contact.component.html
+++ b/src/app/core/views/contact/contact.component.html
@@ -2,4 +2,4 @@
 
 You can reach me at <a href="mailto:{{ site.email }}">{{ site.email }}</a> or on <a href="{{ site.instagram }}">Instagram</a>.
 <br><br>
-check github repo uwu: <a href="https://github.com/Shukaaa/shuka.rip">shuka.rip</a>
+github repo: <a href="https://github.com/Shukaaa/shuka.rip">Shukaaa/shuka.rip</a>
