--- a/src/app/core/views/home/home.component.html
+++ b/src/app/core/views/home/home.component.html
@@ -2,7 +2,7 @@
 
 Welcome to my portfolio website!<br/>
 <br/><br/>
-Hello there!  <img class="hello" src="assets/hello.jpg" alt="hello"> <br/>
+Hello there!  <img class="hello" src="../../../../assets/img/hello.jpg" alt="hello"> <br/>
 <br/>
 My name is <i class="flash">Lucas</i>, and I'm a passionate developer from <i class="shadow-dance-de">Germany</i>,
 specifically from the beautiful city of <span (mouseover)="showMd($event)" (mouseleave)="hideMd($event)">Magdeburg</span>.<br/>
@@ -20,9 +20,9 @@ I have a strong affinity for programming and enjoy working with various language
 </ul><br/>
 and frameworks like:
 <ul>
-  <li><span class="colorful">A</span>ngular (Web FW)</li>
-  <li><span class="colorful">I</span>onic (App FW)</li>
-  <li><span class="colorful">S</span>pring Boot (APIs)</li>
+  <li><span class="colorful">A</span>ngular</li>
+  <li><span class="colorful">I</span>onic</li>
+  <li><span class="colorful">S</span>pring Boot</li>
 </ul><br/>
 Recently, I've been delving into game development, app development, and even operating system development.<br/>
 I'm currently exploring languages like Go, C, C#, and more.<br/>
@@ -35,6 +35,6 @@ If you have any questions, don't hesitate to <a href="#Contact">reach out</a> to
 <br>
 <a href="#Home" (click)="toggleVideo()">funny video</a>
 <video [volume]="0" width="320" height="240" style="display: none" autoplay>
-  <source src="assets/fish.mp4" type="video/mp4">
+  <source src="assets/video/fish.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
