--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,6 +21,14 @@
   overflow: auto;
 }
 
+@media (max-width: 600px) {
+  .content {
+    width: 100%;
+    height: 100%;
+    padding: 3em 1em 1em;
+  }
+}
+
 .wtf {
   @include funky-border();
 }
@@ -36,3 +44,24 @@
   }
 }
 
+
+#enlarged-image-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 99999;
+}
+
+#enlarged-image {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+  border: 4px dashed black;
+}
+
+#close-text {
+  background: #fff;
+  padding: 5px;
+  border: black 1px solid;
+}
