--- a/src/app/core/components/gud-badge/gud-badge.component.html
+++ b/src/app/core/components/gud-badge/gud-badge.component.html
@@ -1,3 +1,3 @@
 <div class="gud" id="gud-badge">
-  <img src="assets/gud.png" alt="gud">
+  <img src="../../../../assets/img/gud.png" alt="gud">
 </div>
